Fix markdown text in HFE_Tasks notebook

--- a/notebooks/HFE_Tasks.ipynb
+++ b/notebooks/HFE_Tasks.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# HFE 2025 - Tasks 1-9\n",
     "\n",
-    "This notebook is ready for your HFE tasks.\n"
+    "HFE tasks.\n"
    ]
   },
   {
